K8s-exercises/Log output/manifests/deployment-persistent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
      - name: shared-log-output
        persistentVolumeClaim:
          claimName: log-output-claim
      containers:
      - name: log-output
        image: moryarty/log-output:v0.2
        volumeMounts:
        - name: shared-log-output
          mountPath: /usr/src/app/files
      - name: ping-pong
        image: moryarty/pingpong:v0.2
        volumeMounts:
        - name: shared-log-output
          mountPath: /usr/src/app/file
