K8s-exercises/Log output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: log-output
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      containers:
      - name: log-output
        image: moryarty/log-output:v0.3
      - name: ping-pong
        image: moryarty/pingpong:v0.3
